--- a/ngrok/Dockerfile
+++ b/ngrok/Dockerfile
@@ -13,9 +13,9 @@ RUN set -x \
  && if [[ "${BUILD_ARCH}" = "armhf" ]]; then ARCH="arm"; fi \
  && if [[ "${BUILD_ARCH}" = "armv7" ]]; then ARCH="arm"; fi \
  && if [[ "${BUILD_ARCH}" = "i386" ]]; then ARCH="386"; fi \
- && curl -Lo /ngrok.zip https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-${ARCH}.zip \
- && unzip -o /ngrok.zip -d /bin \
- && rm -f /ngrok.zip
+ && wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-${ARCH}.tgz \
+ && tar xvzf /ngrok-v3-stable-linux-${ARCH}.tgz -C /bin
+ && rm -f /ngrok-v3-stable-linux-${ARCH}.tgz
 
 # Initialize ngrok
 RUN  ngrok --version
