--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -40,6 +40,24 @@
     "log_level": "list(crit|warn|error|info|debug)",
     "auth_token": "str?",
     "region": "list(us|eu|ap|au|sa|jp|in)?",
-    "tunnels": "str?"
+    "tunnels": [
+      {
+        "name": "str",
+        "proto": "list(http|tls|tcp)",
+        "addr": "match(^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]):([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5]))|([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5])$)",
+        "inspect": "bool?",
+        "auth": "password",
+        "host_header": "str?",
+        "bind_tls": "bool?",
+        "subdomain": "str?",
+        "hostname": "str?",
+        "crt": "str?",
+        "key": "str?",
+        "client_cas": "str?",
+        "remote_addr": "match(^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]):([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5])$)?",
+        "metadata": "str?",
+        "labels": "str?"
+      }
+    ]
   }
 }
