--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -43,7 +43,7 @@
     "tunnels": [
       {
         "name": "str",
-        "proto": "list(http|tls|tcp)",
+        "proto": "str?",
         "addr": "match(^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]):([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5]))|([1-9]|[1-5]?[0-9]{2,4}|6[1-4][0-9]{3}|65[1-4][0-9]{2}|655[1-2][0-9]|6553[1-5])$)",
         "inspect": "bool?",
         "auth": "str?",
